# MeasurementComputingCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init-repository.sh  install-measurementcomputingcpp.sh  install.sh  uninstall.sh
MeasurementComputingCore/: CMakeLists.txt
MeasurementComputingCore/hidapi/: hidapi.h
MeasurementComputingCore/mccusb-root/: CMakeLists.txt
MeasurementComputingCpp/: CMakeLists.txt  USB_1024LS.cpp  USB_1024LS.hpp  USB_1208FS.cpp  USB_1208FS.hpp  USB_1208LS.cpp  USB_1208LS.hpp  USB_1608FS.cpp  USB_1608FS.hpp  USB_IO_Base.hpp
MeasurementComputingCpp/posix/: USB_1024LS.cpp  USB_1208FS.cpp  USB_1208LS.cpp  USB_1608FS.cpp  USB_IO_Base.cpp
MeasurementComputingCpp/posix/mccusb-root/: CMakeLists.txt
MeasurementComputingCpp/test/: CMakeLists.txt
MeasurementComputingCpp/test/USB_1208LS/: CMakeLists.txt  Main.cpp
MeasurementComputingCpp/test/USB_1608FS/: CMakeLists.txt  Main.cpp
MeasurementComputingCpp/win32/: USB_1024LS.cpp  USB_1208FS.cpp  USB_1208LS.cpp  USB_1608FS.cpp  USB_IO_Base.cpp
MeasurementComputingCpp/win32/common/: cbw64.lib
hidapi-root/: CMakeLists.txt  clone-source.sh
include/MeasurementComputingCpp/: USB_1024LS.hpp  USB_1208FS.hpp  USB_1208LS.hpp  USB_1608FS.hpp  USB_IO_Base.hpp
libusb-root/: CMakeLists.txt  clone-source.sh  config.h  linux-config.h  mingw-config.h
libusb-root/sys/: ioctl.h  termios.h  utsname.h
mccusb-root/: CMakeLists.txt  clone-source.sh  libusb-1.0
mccusb-root/Linux_Drivers/Ethernet/c/: E-1608.c  E-DIO24.c
mccusb-root/Linux_Drivers/PCI/pci-das4020-12/: Calibration.ps
src/: CMakeLists.txt  USB_1024LS.cpp  USB_1208FS.cpp  USB_1208LS.cpp  USB_1608FS.cpp  USB_IO_Base.cpp
win32/: CMakeLists.txt
win32/common/: cbw32.lib
